--- a/GTA World Renderer/GTA World Renderer.csproj
+++ b/GTA World Renderer/GTA World Renderer.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="Logging\ConsoleLogWriter.cs" />
+    <Compile Include="Logging\FileLogWriter.cs" />
     <Compile Include="Logging\ILogWriter.cs" />
     <Compile Include="Logging\Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
