TXDArchive loader is implemented but not tested

--- a/GTA World Renderer/GTA World Renderer.csproj
+++ b/GTA World Renderer/GTA World Renderer.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Scenes\Scene.cs" />
     <Compile Include="Scenes\SceneLoader.cs" />
     <Compile Include="Scenes\SceneObjectDefinition.cs" />
+    <Compile Include="Scenes\TXDArchive.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
