--- a/GTA World Renderer/GTA World Renderer.csproj
+++ b/GTA World Renderer/GTA World Renderer.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Scenes\ArchivesCommon.cs" />
+    <Compile Include="Scenes\DffLoader.cs" />
     <Compile Include="Scenes\GTATexture.cs" />
     <Compile Include="Scenes\IDEFileLoader.cs" />
     <Compile Include="Scenes\IMGArchive.cs" />
