Camera handling acoording to keyboard and mouse input. Information about camera position and camera rotation displays at TextInfoPanel

--- a/GTA World Renderer/GTA World Renderer.csproj
+++ b/GTA World Renderer/GTA World Renderer.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Rendering\Camera.cs" />
+    <Compile Include="Rendering\TextInfoPanel.cs" />
     <Compile Include="Scenes\ArchivesCommon.cs" />
     <Compile Include="Scenes\DffLoader.cs" />
     <Compile Include="Scenes\GTATexture.cs" />
