Added file proxies for using as archive entries. Scene loading time was reduced by 1.5 - 2 times

--- a/GTA World Renderer/GTA World Renderer.csproj
+++ b/GTA World Renderer/GTA World Renderer.csproj
@@ -100,8 +100,9 @@
     <Compile Include="Rendering\InfoPanelFor3Dview.cs" />
     <Compile Include="Rendering\SceneRenderer3D.cs" />
     <Compile Include="Rendering\TextInfoPanel.cs" />
-    <Compile Include="Scenes\ArchivesCommon.cs" />
     <Compile Include="Scenes\Loaders\DffLoader.cs" />
+    <Compile Include="Scenes\Loaders\FileProxy.cs" />
+    <Compile Include="Scenes\Loaders\FileSystemProxy.cs" />
     <Compile Include="Scenes\Loaders\GTATextureLoader.cs" />
     <Compile Include="Scenes\Loaders\IDEFileLoader.cs" />
     <Compile Include="Scenes\Loaders\IMGArchive.cs" />
