--- a/GTA World Renderer/GTA World Renderer.csproj
+++ b/GTA World Renderer/GTA World Renderer.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="GeometryUtils.cs" />
     <Compile Include="GraphicsDeviceHolder.cs" />
+    <Compile Include="Rendering\CellsDividedSceneRenderer.cs" />
     <Compile Include="Rendering\Renderer.cs" />
     <Compile Include="Logging\ConsoleLogWriter.cs" />
     <Compile Include="Logging\FileLogWriter.cs" />
