Implemented renderes switcher

--- a/GTA World Renderer/GTA World Renderer.csproj
+++ b/GTA World Renderer/GTA World Renderer.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Rendering\Camera.cs" />
     <Compile Include="Rendering\CompositeRenderer.cs" />
     <Compile Include="Rendering\InfoPanelFor3Dview.cs" />
+    <Compile Include="Rendering\RendererSwitcher.cs" />
     <Compile Include="Rendering\SceneRenderer3D.cs" />
     <Compile Include="Rendering\TextInfoPanel.cs" />
     <Compile Include="Scenes\Loaders\DffLoader.cs" />
